<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp">

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phonenumber"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <EditText
            android:id="@+id/edit_text_message"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_text"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_send"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>